force-app/main/default/objects/Transaction_Item__c/Transaction_Item__c.object-meta.xml
<CustomObject>
    <label>Transaction Item</label>
    <nameField>
        <label>Transaction Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>