force-app/main/default/objects/Transaction_Item__c/fields/Additional_Deposit_Pending__c.field-meta.xml
<CustomField>
    <fullName>Additional_Deposit_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Deposit Pending</label>
    <type>Checkbox</type>
</CustomField>