force-app/main/default/objects/Transaction_Item__c/fields/Assigned_To_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Conversion__c</fullName>
    <label>Assigned To (Conversion)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>