force-app/main/default/objects/Transaction_Item__c/fields/Balance_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Balance_Discussed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balance Discussed</label>
    <type>Checkbox</type>
</CustomField>