force-app/main/default/objects/Transaction_Item__c/fields/Disbursement_Code__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disbursement Code</label>
    <referenceTo>Disbursement_Code__c</referenceTo>
    <relationshipName>Disbursement_Items</relationshipName>
    <type>Lookup</type>
</CustomField>