force-app/main/default/objects/Transaction_Item__c/fields/Entered_By_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Entered_By_Conversion__c</fullName>
    <label>Entered By (Conversion)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>