force-app/main/default/objects/Transaction_Item__c/fields/Is_Deferred__c.field-meta.xml
<CustomField>
    <fullName>Is_Deferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deferred</label>
    <type>Checkbox</type>
</CustomField>