force-app/main/default/objects/Transaction_Item__c/fields/Item_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Item_Requested_By__c</fullName>
    <label>Item Requested By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>