force-app/main/default/objects/Transaction_Item__c/fields/Not_Filled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Filled_Reason__c</fullName>
    <label>Not Filled Reason</label>
    <type>TextArea</type>
</CustomField>